improve image colour mixing and responsive design

--- a/index.html
+++ b/index.html
@@ -38,18 +38,11 @@
 
           <!-- ********************  Card Statistics  ********************* -->
           <div class="card__stat">
-            <div class="stat-box stat-company">
-              <p>10k+</p>
-              <p>companies</p>
-            </div>
-            <div class="stat-box stat-templates">
-              <p>314</p>
-              <p>templates</p>
-            </div>
-            <div class="stat-box stat-queries">
-              <p>12m+</p>
-              <p>queries</p>
-            </div>
+            <ul>
+              <li>10k+<span>companies</span></li>
+              <li>314<span>templates</span></li>
+              <li>12m+<span>queries</span></li>
+            </ul>
           </div>
         </div>
       </div>
